# powervr-package

./: .gitignore  GPU_EXPOSURE_GUIDE.md  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
scripts/: build.sh  clean.sh  install.sh  package.sh  setup.sh  test.sh
vulkan-wirings/: gpu_probe  gpu_probe.c  vgpu.py  vgpu_chat.py  vgpu_core.py  vgpu_gateway.py
